@@ -218,6 +218,29 @@ $posts=Post::model()->findAll(array(
 ~~~
 
 
+Performing Relational JOIN without getting related models
+---------------------------------------------------------
+
+Sometimes we need to perform JOIN using relation but don't want to get related
+models. Let's assume we have `User`s who posted many `Post`s. Post can be published
+but also can be in a draft state. This is determined by `published` field in the
+post model. Now we need to get all users who have published posts and we are not
+interested in posts themselves. This can be achieved the following way:
+
+~~~
+[php]
+$users=User::model()->with(array(
+	'posts'=>array(
+		// we don't want to select posts
+		'select'=>false,
+		// but want to get only users with published posts
+		'joinType'=>'INNER JOIN',
+		'condition'=>'posts.published=1',
+	),
+))->findAll();
+~~~
+
+
 Relational Query Options
 ------------------------
 
